Photos from mediafolder can now be deleted on server and client.

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,3 +1,3 @@
 <p>{{this.connectionService.getHost()}}:{{this.connectionService.getPort()}}</p>
 
-<img *ngFor="let i of images" src="{{i}}">
+<img *ngFor="let i of images" src="{{i.imageBase64}}">
