adding event-detail.

--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,1 +1,2 @@
 <event-overview [images]="images" [overviewLayout]="tempOverviewLayout"></event-overview>
+<!--<event-detail [isFullScreen]="true" [images]="images" [detailLayout]="tempDetailLayout"></event-detail>-->
