--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,2 +1,5 @@
-<event-overview [images]="images" [overviewLayout]="tempOverviewLayout"></event-overview>
-<!--<event-detail [isFullScreen]="true" [images]="images" [detailLayout]="tempDetailLayout"></event-detail>-->
+<event-overview *ngIf="eventOverviewIsShowed" [images]="images" [overviewLayout]="tempOverviewLayout"
+                (goToEventDetail)="showEventDetail($event)"
+                (selectedImagesEmitter)="setSelectedImages($event)"></event-overview>
+<event-detail *ngIf="!eventOverviewIsShowed" [isFullScreen]="true" [images]="selectedImages" [detailLayout]="tempDetailLayout"
+              (goToEventOverview)="showEventOverview($event)"></event-detail>
