--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,4 +1,4 @@
-<event-overview *ngIf="eventOverviewIsShowed" [images]="images" [overviewLayout]="tempOverviewLayout"
+<event-overview *ngIf="eventOverviewIsShowed" [images]="images" [overviewLayout]="tempOverviewLayout" [savedSelectedImages]="selectedImages"
                 (goToEventDetail)="showEventDetail($event)"
                 (selectedImagesEmitter)="setSelectedImages($event)"></event-overview>
 <event-detail *ngIf="!eventOverviewIsShowed" [isFullScreen]="true" [images]="selectedImages" [detailLayout]="tempDetailLayout"
