--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -20,9 +20,9 @@
   <div class="photo-actions col-sm-7 col-xs-12">
     <div class="printAndShare">
       <img *ngIf="detailLayout != null && detailLayout.printBtnImage != null" class="detail-button"
-           src="{{detailLayout.printBtnImage}}">
+           src="{{detailLayout.printBtnImage}}" (click)="showPrintMessage()">
       <button *ngIf="detailLayout != null && detailLayout.printBtnImage == null" class="btn btn-default"
-              [ngStyle]="setPrintButton()">{{detailLayout.printBtnText}}
+              [ngStyle]="setPrintButton()" (click)="showPrintMessage()">{{detailLayout.printBtnText}}
       </button>
       <img *ngIf="detailLayout != null && detailLayout.shareBtnImage != null" class="detail-button"
            src="{{detailLayout.shareBtnImage}}">
@@ -31,7 +31,8 @@
       </button>
     </div>
     <div class="printMessageAndQr">
-      <div class="printMessage" [ngClass]="{'full-screen': isFullScreen, 'small-screen': !isFullScreen}"
+      <div *ngIf="isPrinted" class="printMessage"
+           [ngClass]="{'full-screen': isFullScreen, 'small-screen': !isFullScreen}"
            [ngStyle]="setPrintMessage()">{{detailLayout.printMessageText}}
       </div>
       <div class="qr" [ngClass]="{'full-screen': isFullScreen, 'small-screen': !isFullScreen}"></div>
