--- a/src/app/event/event-overview/event-overview.component.css
+++ b/src/app/event/event-overview/event-overview.component.css
@@ -45,6 +45,10 @@ swiper {
   height: 100%;
 }
 
+swiper:first-child, .swiper-container {
+  overflow: visible;
+}
+
 .swiper-slide {
   text-align: center;
   font-size: 18px;
@@ -103,7 +107,7 @@ footer {
 }
 
 .swiper-pagination {
-/* bottom: -3rem;*/
+  /* bottom: -3rem;*/
 }
 
 .hide-pagination {
