Parse Layout JSON in client.

--- a/src/app/event/event-overview/event-overview.component.html
+++ b/src/app/event/event-overview/event-overview.component.html
@@ -2,7 +2,7 @@
 <div class="exit-btn" id="exit-btn-2" (click)="showMenuRightBtn()"></div>
 
 <header [ngStyle]="setLogo()">
-  <img *ngIf="overviewLayout != null && overviewLayout.logo != null" class="logo" src="{{overviewLayout.logo}}">
+  <img *ngIf="overviewLayout !== null && overviewLayout.logo !== null" class="logo" src="{{overviewLayout.logo}}">
 </header>
 <main
   [ngStyle]="setImageContainerStyle()">
