--- a/src/app/event/event.component.html
+++ b/src/app/event/event.component.html
@@ -1,5 +1,14 @@
-<event-overview *ngIf="eventOverviewIsShowed" [images]="images" [overviewLayout]="tempOverviewLayout" [savedSelectedImages]="selectedImages"
+<event-overview *ngIf="eventOverviewIsShowed"
+                [images]="images"
+                [ngStyle]="setBackground()"
+                [overviewLayout]="overviewLayout"
+                [savedSelectedImages]="selectedImages"
                 (goToEventDetail)="showEventDetail($event)"
                 (selectedImagesEmitter)="setSelectedImages($event)"></event-overview>
-<event-detail *ngIf="!eventOverviewIsShowed" [isFullScreen]="true" [images]="selectedImages" [detailLayout]="tempDetailLayout" [eventId]="eventId"
+<event-detail *ngIf="!eventOverviewIsShowed"
+              [isFullScreen]="true"
+              [images]="selectedImages"
+              [ngStyle]="setBackground()"
+              [detailLayout]="detailLayout"
+              [eventId]="eventId"
               (goToEventOverview)="showEventOverview($event)"></event-detail>
