--- a/src/app/event/event-detail/event-detail.component.css
+++ b/src/app/event/event-detail/event-detail.component.css
@@ -2,114 +2,112 @@
   background: #cecece;
 }
 
-.exit-btn {
-  width: 70px;
-  height: 70px;
+body {
   position: absolute;
-  top: 0;
-}
-
-#exit-btn-1 {
-  left: 0;
-}
-
-#exit-btn-2 {
-  right: 0;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
 }
 
 main {
   height: 100%;
   width: 100%;
-  margin: 0;
 }
 
-.photos {
+.full-height {
   height: 100%;
 }
 
-.photos > .photo {
+#top-container {
   height: 80%;
-  width: 100%;
+}
+
+#bottom-container {
+  height: 20%
+}
+
+#selected-image {
+  height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 1rem;
+  /*background-color: beige;*/
 }
 
-.photo > img {
+#selected-image img {
   max-height: 100%;
   max-width: 100%;
 }
 
-.photos > .photo-overview {
-  height: 20%;
-  width: 100%;
-  padding: 1rem;
-  overflow: hidden;
-}
-
-.photo-actions {
+#image-actions {
+  padding: 65px 0;
   height: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: space-around;
+  justify-content: center;
+  /*background-color: red;*/
 }
 
-.printAndShare, .backAndFinish {
-  display: flex;
-  justify-content: space-around;
+#back,
+#finish,
+#print,
+#print-message {
+  height: 25%;
 }
 
-.printMessageAndQr {
-  display: flex;
-  justify-content: space-around;
+#back button,
+#finish button,
+#print button {
+  font-size: 1.5em;
+  height: 70px;
+  width: 100%;
 }
 
-.printMessage {
+.show-message {
+  opacity: 1;
+}
+
+.hide-message {
+  opacity: 0;
+}
+
+#print-message {
   display: flex;
   justify-content: center;
-  align-items: center;
-}
-
-.full-screen {
-  height: 25rem;
-  width: 25rem;
-}
-
-.small-screen {
-  height: 13rem;
-  width: 13rem;
-}
-
-swiper {
-  height: 100%;
-}
-
-.swiper-slide {
+  flex-direction: column;
   text-align: center;
-  font-size: 18px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
-.swiper-slide > img {
+#print-message p {
+  font-size: 1.5em;
+}
+
+#gallery {
+  padding: 25px 0;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+#gallery .image-placeholder {
+  height: 100%;
+  background-color: gray;
+}
+
+#qr {
+  height: 100%;
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
+
+#qr img {
   max-height: 100%;
   max-width: 100%;
 }
 
-.hide-pagination {
-  display: none;
-}
-
-.detail-button{
-  max-height: 50%;
-}
-
-@media screen and (min-width: 768px) {
-  main {
-    display: flex;
-    flex-direction: row;
-  }
+swiper img {
+  max-width: 70%;
 }
