css - connect page

--- a/src/app/connect/connect.component.html
+++ b/src/app/connect/connect.component.html
@@ -1,5 +1,5 @@
 <div id="serverlogincontainer">
-  <form>
+  <form class="container">
     <div class="form-group">
       <label for="host">Host</label>
       <input
