Change DetailLayout direction on click.

--- a/src/app/event/event-detail/event-detail.component.html
+++ b/src/app/event/event-detail/event-detail.component.html
@@ -1,14 +1,20 @@
 <div class="container-fluid full-height" [ngStyle]="setImagePositionAndBackground()">
 
   <main class="full-height">
+
+    <div [ngStyle]="setLeftSwitchButton()" (click)="switchLayoutLeftBtn()"></div>
+    <div [ngStyle]="setRightSwitchButton()" (click)="switchLayoutRightBtn()"></div>
+
     <div id="top-container" class="row">
-      <div class="col-xs-9 full-height">
+      <div class="col-xs-9 full-height"
+           [ngClass]="{'col-xs-push-3': switched }">
         <div id="selected-image">
           <img src="{{selectedImage.imageBase64}}" [ngStyle]="setImageStyle()">
         </div>
       </div>
 
-      <div class="col-xs-3 full-height">
+      <div class="col-xs-3 full-height"
+           [ngClass]="{'col-xs-pull-9': switched }">
         <div id="image-actions">
           <div id="back">
             <img *ngIf="detailLayout != null && detailLayout.backBtnImage != null"
@@ -51,7 +57,8 @@
     </div>
 
     <div id="bottom-container" class="row">
-      <div class="col-xs-9">
+      <div class="col-xs-9"
+           [ngClass]="{'col-xs-push-3': switched }">
         <swiper [config]="config">
           <div class="swiper-wrapper">
             <div class="swiper-slide" *ngFor="let img of images">
@@ -61,7 +68,8 @@
         </swiper>
       </div>
 
-      <div class="col-xs-3">
+      <div class="col-xs-3"
+           [ngClass]="{'col-xs-pull-9': switched }">
         <div id="qr">
           <qr-code [value]="qrCode" [size]="136" [level]="'H'"></qr-code>
         </div>
